# IS

./: lab4.ipynb  Практика1.ipynb  Практика2.ipynb
IKM/: .dockerignore  .gitignore  CUSTOMER_CHURN_PREDICTION.ipynb  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
IKM/.github/workflows/: tests.yml
IKM/src/: app.py  train.py
IKM/tests/: test_basic.py  test_e2e.py  test_unit.py
lab3/: lab3.ipynb
lab5/: lab5.ipynb
lab6/: lab6.ipynb
lab_1/: ЭС 1файл Малков Иван.docx  ЭС 2файл Малков Иван.docx
lab_1/python-script/: .dockerignore  .gitignore  Dockerfile  app.py  cli.py  docker-compose.yml  engine.py  main.py  pyproject.toml
lab_2/: best_model_lab1.pkl  best_model_lab2.pkl  Практика2.ipynb
